@@ -87,7 +87,6 @@ kotlin {
             implementation(libs.work.runtime)
             implementation(libs.core.remoteviews)
             implementation(libs.media)
-            implementation(libs.compose.webview)
             implementation(libs.coil.gif)
             implementation(libs.qrcode)
         }
@@ -347,10 +346,9 @@ compose.desktop {
 
         buildTypes.release {
             proguard {
-                obfuscate = true
+                obfuscate = false
                 optimize = false
                 joinOutputJars = true
-                version = "7.7.0"
                 configurationFiles.from(project.file("proguard-rules-desktop.pro"))
             }
         }
@@ -557,6 +555,7 @@ tasks.register<Exec>("buildNativeImage") {
         "-H:+ReportExceptionStackTraces",
 //        "-g",
 //        "--enable-monitoring=nmt",
+        "--enable-native-access=ALL-UNNAMED",
         "--include-locales",
         if (os.isWindows) "-H:NativeLinkerOption=/SUBSYSTEM:WINDOWS" else null,
         if (os.isWindows) "-H:NativeLinkerOption=/ENTRY:mainCRTStartup" else null,
